# BlackbookFetcher

./: .gitignore  .replit  CURL_EXAMPLES.md  README.md  app.py  blackbook_service.py  main.py  market_listings_service.py  pyproject.toml  replit.md  requirements.txt
static/: admin.js  script.js  style.css
templates/: admin.html  index.html
