[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-limiter>=4.0.0",
    "gql>=4.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
]
